Remove deprecated use of Long(long) constructor